@@ -21,11 +21,11 @@ int main(void)
   pci_scan_bus(pacc);		/* We want to get the list of devices */
   for(dev=pacc->devices; dev; dev=dev->next)	/* Iterate over all devices */
     {
-      pci_fill_info(dev, PCI_FILL_IDENT | PCI_FILL_BASES);	/* Fill in header info we need */
-      c = pci_read_word(dev, PCI_CLASS_DEVICE);	/* Read config register directly */
-      printf("%02x:%02x.%d vendor=%04x device=%04x class=%04x irq=%d base0=%lx\n",
+      pci_fill_info(dev, PCI_FILL_IDENT | PCI_FILL_BASES | PCI_FILL_CLASS);	/* Fill in header info we need */
+      c = pci_read_byte(dev, PCI_INTERRUPT_PIN);				/* Read config register directly */
+      printf("%02x:%02x.%d vendor=%04x device=%04x class=%04x irq=%d (pin %d) base0=%lx\n",
 	     dev->bus, dev->dev, dev->func, dev->vendor_id, dev->device_id,
-	     c, dev->irq, dev->base_addr[0]);
+	     dev->device_class, dev->irq, c, dev->base_addr[0]);
     }
   pci_cleanup(pacc);		/* Close everything */
   return 0;
